# voippp

./: CMakeLists.txt  README.md
src/: audio_device.hpp  buffer_fill.cpp  buffer_fill.hpp  main.cpp  network.cpp  network.hpp  sdl_init.hpp
tests/: tests_buffer_fill.cpp
